# RummySolver

./: .gitignore  CMakeLists.txt  README.md
examples/: deck-cond.txt  deck-hard.txt  deck-locked.txt  deck-long.txt  deck-semi.txt  deck-wrap.txt  table-cond.txt  table-hard.txt  table-locked.txt  table-semi.txt  table-wrap.txt
src/: DeckJokerTile.cpp  DeckJokerTile.h  DeckRegularTile.cpp  DeckRegularTile.h  GameInfo.cpp  GameInfo.h  Group.cpp  Group.h  GroupConfiguration.cpp  GroupConfiguration.h  PotentialGroup.cpp  PotentialGroup.h  PotentialStair.cpp  PotentialStair.h  PotentialTrio.cpp  PotentialTrio.h  ProgressBar.cpp  ProgressBar.h  ShufflingTools.cpp  ShufflingTools.h  TableJokerTile.cpp  TableJokerTile.h  TableRegularTile.cpp  TableRegularTile.h  Tile.cpp  Tile.h  TileColor.cpp  TileColor.h  main.cpp
src/Parser/: GameParser.cpp  GameParser.h  ParsingUtils.cpp  ParsingUtils.h
