cmake_minimum_required(VERSION 3.5.1)
project(RummySolver)
include_directories("${PROJECT_SOURCE_DIR}/src")
file(GLOB_RECURSE SOURCES "${PROJECT_SOURCE_DIR}/src/*.cpp")
add_executable(RummySolver "${SOURCES}")
set(COMMON_FLAGS -std=c++11 -Wall -Wextra -Wpedantic -Werror)
set(DEBUG_FLAGS ${COMMON_FLAGS} -g3 -O0)
set(RELEASE_FLAGS ${COMMON_FLAGS} -O3 -Wno-maybe-uninitialized)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
target_compile_options(RummySolver PUBLIC "$<$<CONFIG:DEBUG>:${DEBUG_FLAGS}>")
target_compile_options(RummySolver PUBLIC "$<$<CONFIG:RELEASE>:${RELEASE_FLAGS}>")
target_link_libraries(RummySolver boost_filesystem boost_program_options boost_system)
